# OCaml-repo

./: README.md  dune (jbuilder)命令.txt
ocamltestproj/: ocamltestproj.install  ocamltestproj.opam
ocamltestproj/_build/: .db  .digest-db  .to-delete-in-source-tree  log
ocamltestproj/_build/.aliases/default/: install-00000000000000000000000000000000
ocamltestproj/_build/.aliases/default/lib/: lib-lib.cmi-all-00000000000000000000000000000000  lib-lib.cmi-and-.cmx-all-00000000000000000000000000000000  lib-lib.cmx-all-00000000000000000000000000000000
ocamltestproj/_build/default/: ocamltestproj.version.sexp
ocamltestproj/_build/default/lib/: lib.cmxa  lib.ml-gen  mo1.ml
ocamltestproj/_build/default/lib/.lib.objs/: lib.cmi  lib.cmo  lib.cmt  lib.cmx  lib__Mo1.cmi  lib__Mo1.cmo  lib__Mo1.cmt  lib__Mo1.cmx  mo1.ml.d
ocamltestproj/_build/install/default/lib/ocamltestproj/: META  opam
ocamltestproj/lib/: .merlin  mo1.ml
prj/: .merlin  fold1.cmi  fold1.ml  fold1.mli  mod1.cmi  mod1.ml  mod1.mli  mod2.ml  mod3.cmi  mod3.ml  mod3.mli  命令汇总.txt
prj/fold1/: fold2a.cmi  fold2a.ml  fold2a.mli  fold3a.ml
real-world-ocaml/: .merlin
real-world-ocaml/src1/ch1/: arr_list_tup_match.ml  counter.byte  counter.cmi  counter.cmo  counter.ml  counter.mli  freq.byte  freq.cmi  freq.cmo  freq.ml  pkgs.ml  record-ref-variants.native  record_ref_variants.ml  sum.ml  sum.native
real-world-ocaml/src1/ch10_module_val/: module_as_val.ml
types/c3_arith/: c3_arith.opam  untyped arith.txt
types/c5_full_untyped/: c5_无类型lambda-calculas.txt
types/untyped/: core.ml  syntax.ml
(+81 files in other folders)
